--- a/app/src/main/res/layout/fab_music.xml
+++ b/app/src/main/res/layout/fab_music.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?><!--<android.support.design.widget.FloatingActionButton xmlns:android="http://schemas.android.com/apk/res/android"--><!--xmlns:app="http://schemas.android.com/apk/res-auto"--><!--android:id="@+id/fab_music"--><!--android:layout_width="wrap_content"--><!--android:layout_height="wrap_content"--><!--android:layout_alignParentBottom="true"--><!--android:layout_marginBottom="20dp"--><!--android:src="@mipmap/music"--><!--app:borderWidth="0dp" />-->
-<Button xmlns:android="http://schemas.android.com/apk/res/android"
+<ImageView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/fab_music"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content" />
+    android:src="@drawable/musicview"
+    android:layout_width="64dp"
+    android:layout_height="64dp" />
