--- a/app/src/main/res/layout/gasstation_date_popwindow.xml
+++ b/app/src/main/res/layout/gasstation_date_popwindow.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="100dp"
+    android:layout_height="140dp"
     android:background="@color/white_background"
     android:orientation="vertical">
 
@@ -30,11 +30,29 @@
                 android:layout_marginLeft="12dp"
                 android:src="@mipmap/distance" />
             <TextView
+                android:id="@+id/tv_distance"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="6dp"
+                android:text="12km"
+                android:textSize="16sp" />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+            <ImageView
+                android:layout_width="16dp"
+                android:layout_height="16dp"
+                android:layout_marginLeft="12dp"
+                android:src="@mipmap/location" />
+            <TextView
                 android:id="@+id/tv_poi_date_adress"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="6dp"
-                android:text="中国重庆市南岸区崇文路"
+                android:text="重庆市南岸区"
                 android:textSize="16sp" />
         </LinearLayout>
 
@@ -70,4 +88,11 @@
         android:paddingRight="19dp"
         android:paddingTop="33dp"
         android:src="@mipmap/order" />
+    <ImageView
+        android:id="@+id/iv_go"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity = "right|center_vertical"
+        android:layout_marginRight="80dp"
+        android:src="@mipmap/icon_car" />
 </android.support.v7.widget.CardView>
