--- a/app/src/main/res/layout/fragment_addgass.xml
+++ b/app/src/main/res/layout/fragment_addgass.xml
@@ -93,12 +93,12 @@
         </LinearLayout>
 
     </LinearLayout>
-    <ImageView
-        android:id="@+id/iv_my_location"
+    <Button
+        android:id="@+id/btn_my_location"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="64dp"
         android:layout_marginLeft="24dp"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:src="@mipmap/find_location"/>
+        android:background="@drawable/find_location"/>
 </RelativeLayout>
